<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".views.MainActivity">
    <!--    android:paddingTop="?attr/actionBarSize"-->

...
                android:layout_marginTop="10dp"
                android:text="@string/alarms"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />

            <Button
                android:id="@+id/reminders_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/reminders"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />
...
